[gd_scene load_steps=12 format=3 uid="uid://d03b14il32qs5"]

[ext_resource type="Script" path="res://Elements/assets/gameplay/explosion.gd" id="1_l0qbb"]
[ext_resource type="AudioStream" uid="uid://cm410bdt0as57" path="res://Art/audio/misc/explosion.wav" id="2_weawm"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_m64h2"]
particle_flag_align_y = true
spread = 180.0
initial_velocity_min = 50.0
initial_velocity_max = 50.0
turbulence_noise_strength = 20.0
turbulence_noise_speed = Vector3(3.88, 2.99, 2.125)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_esq4h"]
albedo_color = Color(1, 0.521569, 0, 1)
emission_enabled = true
emission = Color(1, 0.603922, 0, 1)
emission_energy_multiplier = 5.0

[sub_resource type="CylinderMesh" id="CylinderMesh_x1blv"]
material = SubResource("StandardMaterial3D_esq4h")
top_radius = 0.0
bottom_radius = 1.326

[sub_resource type="SphereShape3D" id="SphereShape3D_2q2av"]
radius = 5.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6ba03"]
albedo_color = Color(0.559139, 0.257436, 3.27289e-06, 1)
emission_enabled = true
emission = Color(1, 1, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_olb84"]
material = SubResource("StandardMaterial3D_6ba03")
radius = 5.0
height = 0.001

[sub_resource type="Animation" id="Animation_mq2dy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area3D/MeshInstance3D:mesh:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.001]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Area3D/MeshInstance3D:mesh:radius")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [5.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Area3D/CollisionShape3D:shape:radius")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [5.0]
}

[sub_resource type="Animation" id="Animation_lo8cw"]
resource_name = "explosion"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area3D/MeshInstance3D:mesh:height")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [10.0, 0.001]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Area3D/MeshInstance3D:mesh:radius")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [5.0, 0.001]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Area3D/CollisionShape3D:shape:radius")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [5.0, 0.001]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_13so0"]
_data = {
"RESET": SubResource("Animation_mq2dy"),
"explosion": SubResource("Animation_lo8cw")
}

[node name="Explosion" type="Node3D"]
script = ExtResource("1_l0qbb")

[node name="Particles" type="GPUParticles3D" parent="."]
emitting = false
amount = 50
lifetime = 0.08
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_m64h2")
draw_pass_1 = SubResource("CylinderMesh_x1blv")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
light_color = Color(1, 0.705882, 0, 1)
light_energy = 10.0
shadow_enabled = true
omni_range = 15.0

[node name="Center" type="Marker3D" parent="."]

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_2q2av")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Area3D"]
visible = false
mesh = SubResource("SphereMesh_olb84")
skeleton = NodePath("../..")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ExplosionSFX" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_weawm")
volume_db = -25.0
bus = &"sfx"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_13so0")
}

[connection signal="finished" from="Particles" to="." method="_on_particles_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
